Update and rename ingress-queue.yaml to ingress-dev.yaml

--- a/ingress-dev.yaml
+++ b/ingress-dev.yaml
@@ -4,7 +4,7 @@ metadata:
   name: dev-app-ingress
 spec:
   rules:
-  - host: queue.mywebapp.com
+  - host: dev.mywebapp.com
     http:
       paths:
       - path: /
